--- a/src/_includes/objects/org-item.webc
+++ b/src/_includes/objects/org-item.webc
@@ -8,11 +8,13 @@
     @text="pageName(this.org)"
   ></a>
 
-  &ndash; <p-note
-    class="p-note"
-    @html="mdI(this.org.data.sub)"
-  ></p-note>, <date-range
+  <date-range
     :@date="this.org.date"
     :@end="this.org.data.end"
   ></date-range>
+
+  <p-note
+    class="p-note"
+    @html="`(${mdI(this.org.data.sub)})`"
+  ></p-note>
 </div>
