--- a/src/_layouts/base.webc
+++ b/src/_layouts/base.webc
@@ -64,3 +64,8 @@
     ) top left / 100% var(--gap) no-repeat;
   }
 </style>
+
+<script>
+  const needsJS = [...document.querySelectorAll('[hidden=until-js]')];
+  needsJS.forEach((item) => item.removeAttribute('hidden'));
+</script>
