--- a/src/_css/default/type.css
+++ b/src/_css/default/type.css
@@ -25,6 +25,7 @@ blockquote {
   border-inline-start: thick solid var(--feature);
   border-image: linear-gradient(to bottom, var(--feature), var(--accent)) 1;
   font-style: italic;
+  font-size: var(--step-1);
   padding-inline-start: var(--gap);
 
   @container (inline-size < calc(100vi - 6ch)) {
@@ -33,14 +34,11 @@ blockquote {
 
   & > :first-child { margin-block-start: unset; }
   & > :last-child { margin-block-end: unset; }
-}
 
-[is-quote] {
-  --figure-gap: 0;
-}
-
-[cite-quote] {
-  font-family: var(--ui-font);
+  & > footer {
+    font-family: var(--ui-font);
+    font-size: var(--step-0);
+  }
 }
 
 ul, ol {
@@ -215,6 +213,11 @@ figcaption {
   background: Canvas;
   color: CanvasText;
   font-style: italic;
+  padding-inline: var(--shim);
+
+  & p:only-child {
+    margin: unset;
+  }
 }
 
 .footnote-ref {
