--- a/src/_includes/utils/u-img.webc
+++ b/src/_includes/utils/u-img.webc
@@ -3,4 +3,5 @@
   :alt="this.alt?.trim()"
   :sizes="$data.image[this.sizes] || this.sizes || $data.image.default"
   :width="this.width"
+  @attributes="attrs"
 >
