--- a/src/_css/default/theme.css
+++ b/src/_css/default/theme.css
@@ -1,4 +1,5 @@
 html {
+  --construction: yellow;
   --text-gradient--: linear-gradient(
     to bottom right,
     var(--accent),
@@ -54,10 +55,10 @@ html {
 
   @supports (fill: light-dark(red, red)) {
     --bg: light-dark(oklch(98% 0.01 220), oklch(18% 0.01 220));
-    --text: light-dark(#111, lavender);
+    --text: light-dark(#111, azure);
     --accent: light-dark(mediumVioletRed, hotPink);
     --feature: light-dark(teal, cyan);
-    --mark: light-dark(oklch(90% 0.08 349.69), oklch(30% 0.14 351.99));
+    --mark: light-dark(powderBlue, oklch(from teal calc(l - 0.3) c h));
   }
 
   h3 { font-weight: normal; }
@@ -76,6 +77,7 @@ html {
 }
 
 [data-theme=terminal] {
+  --construction: lime;
   --body-font: var(--fonts-code, var(--fonts-code--));
   --title-font: var(--fonts-code, var(--fonts-code--));
   --code-font: var(--fonts-code, var(--fonts-code--));
@@ -128,6 +130,7 @@ html {
 }
 
 [data-theme=copier] {
+  --construction: white;
   --theme-base-size: 20px;
   --body-font: var(--fonts-sans, var(--fonts-sans--));
   --title-font: var(--fonts-sans, var(--fonts-sans--));
