--- a/src/_layouts/main.webc
+++ b/src/_layouts/main.webc
@@ -3,6 +3,7 @@ layout: page
 ---
 
 <page-summary
+  webc:if="getSummary(this.content)"
   :@summary="getSummary(this.content)"
   :@at="this.at"
   :@rel="this.rel"
